welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
var couleur = false

def hunt(c:Color) {
  avance();
	val c = getCouleurSol();
  recule();
  while (estSurBiscuit()==false) {
  	isFacingTrail();
    if (couleur==true){
      avance();
    }
  	
  }
     
}



def isFacingTrail():Boolean = { 
	if (estFaceMur==false) {
		avance();
  	if (getCouleurSol()=c) {
  		recule();
    	couleur = true;
  	
    	}
    	else { 
      	recule();
  			couleur = false
      }   
 	}
  else gauche()
  return couleur  
}